--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -19,4 +19,4 @@ jobs:
           context: .
           dockerfile: Dockerfile
           push: true
-          tag: UrlaubgegenHand:latest
+          tag: false
