--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -17,6 +17,6 @@ jobs:
       - uses: docker/build-push-action@v1
         with:
           context: .
-          dockerfile: Dockerfile
+          dockerfile: Dockerfile.dockerfile
           push: true
           tag: my-project:latest
