--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v1
         with:
           context: .
           dockerfile: Dockerfile.dockerfile
           push: true
-          tag: my-project:latest
+          tag: UrlaubgegenHand:latest
