--- a/.github/workflows/docker_routine.yml
+++ b/.github/workflows/docker_routine.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Login to Docker registry
       uses: docker/login-action@v2
       with:
-        registry: ghcr.io
+        registry: UGH
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build and push
