--- a/.github/workflows/docker_routine.yml
+++ b/.github/workflows/docker_routine.yml
@@ -6,7 +6,7 @@ on:
 name: Docker Image
 
 env:
-  REGISTRY: UGH
+  REGISTRY: https://hub.docker.com
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -31,7 +31,7 @@ jobs:
     - name: Login to Docker registry
       uses: docker/login-action@v2
       with:
-        registry: UGH
+        registry: https://hub.docker.com
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Build and push
