specified docker hub repo

--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -20,3 +20,4 @@ jobs:
           dockerfile: Dockerfile.dockerfile
           push: true
           tag: urlaubgegenhand:latest
+          repository: urlaubgegenhand
