again updated names for identical name conventions

--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -19,5 +19,5 @@ jobs:
           context: .
           dockerfile: Dockerfile.dockerfile
           push: true
-          tag: urlaubgegenhand:latest
-          repository: urlaubgegenhand
+          tag: urlaubgegenhand/urlaubgegenhand:latest
+          repository: urlaubgegenhand/urlaubgegenhand
