--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker exec -it urlaubgegenhand/urlaubgegenhand:latest systemctl start mysql
+      - run: docker exec -it urlaubgegenhand systemctl start mysql
       - uses: docker/build-push-action@v5
         with:
           context: .
