--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -29,4 +29,6 @@ jobs:
           file: ./Dockerfile.dockerfile
           push: true
           tags: urlaubgegenhand/urlaubgegenhand:latest
+env:
+    DOCKER_BUILDKIT_ARGS: "--build-arg USER=root"
       
