--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -30,5 +30,5 @@ jobs:
           push: true
           tags: urlaubgegenhand/urlaubgegenhand:latest
 env:
-    DOCKER_BUILDKIT_ARGS: "--build-arg USER=root"
+    DOCKER_BUILDKIT_ARGS: "--build-arg USER=root --build-arg DEBUG=1"
       
