ugh-30: don't stage IDE config for commits

--- a/.gitignore
+++ b/.gitignore
@@ -569,3 +569,6 @@ Backend/obj/project.nuget.cache
 Backend/obj/UGHApi.csproj.nuget.dgspec.json
 Backend/obj/UGHApi.csproj.nuget.g.props
 Backend/obj/UGHApi.csproj.nuget.g.targets
+
+# IntelliJ Config
+/.idea/
