--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile.dockerfile
+          file: ./Dockerfile
           push: true
           tags: urlaubgegenhand/urlaubgegenhand:latest
 env:
