--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ http {
 
         # Backend Anfragen an /api
         location /api/ {
-            proxy_pass http://localhost:5000; # Standardport für .NET Core Anwendungen
+            proxy_pass http://localhost; 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
