--- a/compose.yaml
+++ b/compose.yaml
@@ -3,9 +3,9 @@ services:
   server:
     build:
       context: .
-      dockerfile: Dockerfile.dockerfile
+      dockerfile: Dockerfile
     ports:
-      - 8080:80
+      - '8081:8080'
     depends_on:
       db:
         condition: service_healthy
