--- a/nginx.conf
+++ b/nginx.conf
@@ -17,12 +17,12 @@ http {
 
         # Backend Anfragen an /api
         location /api/ {
-            proxy_pass http://localhost; 
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
+			proxy_pass http://server:80; 
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection 'upgrade';
+			proxy_set_header Host $host;
+			proxy_cache_bypass $http_upgrade;
+		}
     }
 }
