--- a/nginx.conf
+++ b/nginx.conf
@@ -1,28 +1,28 @@
 events {}
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
+    include mime.types;
+    default_type application/octet-stream;
+    sendfile on;
+    keepalive_timeout 65;
 
     server {
         listen 80;
 
         # Frontend
         location / {
-            root   /www; # Pfad zum Frontend-Build
-            try_files $uri $uri/ /index.html;
+            root /www; 
+            index index.html;
         }
 
         # Backend Anfragen an /api
         location /api/ {
-			proxy_pass http://server:80; 
-			proxy_http_version 1.1;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection 'upgrade';
-			proxy_set_header Host $host;
-			proxy_cache_bypass $http_upgrade;
-		}
+            proxy_pass http://localhost:80;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 }
