--- a/compose.yaml
+++ b/compose.yaml
@@ -6,6 +6,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+      - ./Frontend-Vuetify/dist:/www
+    environment:
+      - ASPNETCORE_URLS=http://+:8080 #PORT
     depends_on:
       - db
 
@@ -20,7 +24,7 @@ services:
     ports:
       - '3306:3306'
     volumes:
-      - db-data:/var/lib/mysql
+      - ./test-db:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
