--- a/nginx.conf
+++ b/nginx.conf
@@ -16,8 +16,9 @@ http {
         }
 
         # Backend Anfragen an /api
+		# PORT
         location /api/ {
-            proxy_pass http://localhost:80;
+            proxy_pass http://localhost:8080; 
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
