--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=db; User ID=root; Password=password; Database=db; SSL Mode=None"
+    "DefaultConnection" : "Server=ugh-db-1; User ID=user; Password=password; Database=db; SSL Mode=None"
   }
 }
