--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,7 @@ services:
       - ./Frontend-Vuetify/dist:/www
     environment:
       - ASPNETCORE_URLS=http://+:8080 #PORT
+      - DefaultConnection=Server=db;User ID=user;Password=password;Database=db;SSL Mode=None
     depends_on:
       - db
 
@@ -23,8 +24,6 @@ services:
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
       - '3306:3306'
-    volumes:
-      - ./test-db:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
