--- a/compose.yaml
+++ b/compose.yaml
@@ -27,6 +27,15 @@ services:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
+    
+  migration:
+    build:
+      context: .
+      dockerfile: Dockerfile-Migration
+    environment:
+      - ConnectionStrings__DefaultConnection=Server=db;User ID=user;Password=password;Database=db;SSL Mode=None
+    depends_on:
+      - db
 
 volumes:
   db-data:
