--- a/compose.yaml
+++ b/compose.yaml
@@ -10,17 +10,20 @@ services:
       - ./Frontend-Vuetify/dist:/www
     environment:
       - ASPNETCORE_URLS=http://+:8080 #PORT
+      - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
       - db
 
   db:
     image: mysql:5.7
     restart: always
+    command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_DATABASE: 'db'
       MYSQL_USER: 'user'
       MYSQL_PASSWORD: 'password'
       MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_HOST: 'db'
     ports:
       - '3306:3306'
     healthcheck:
