--- a/.docker/backend/Dockerfile
+++ b/.docker/backend/Dockerfile
@@ -1,22 +1,12 @@
-# Backend-Build-Stage
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS backend-build
 WORKDIR /app
 
-# Backend Stuff
 COPY ./Backend /app/Backend
 RUN dotnet publish /app/Backend/UGHApi.csproj --use-current-runtime --self-contained false -o /app/binaries
 RUN rm -r /app/Backend
 
-FROM node:alpine AS frontend-build
-WORKDIR /app
-
-#Frontend Stuff
-COPY ./Frontend-Vuetify /app
-RUN npm install
-RUN npm run build
-
 # Laufzeitumgebung
-FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine
+FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS backend-runtime
 WORKDIR /app
 
 # Nginx installieren und Netzwerktools hinzufügen
@@ -25,14 +15,8 @@ RUN apk add nginx iputils
 # Backend kopieren
 COPY --from=backend-build /app/binaries /app/binaries
 
-# Frontend kopieren
-COPY --from=frontend-build /app/dist /www
-
-# Nginx config hinzufügen
-COPY nginx.conf /etc/nginx/nginx.conf
-
 #PORT
-EXPOSE 80 
+EXPOSE 80
 
 # Nginx und Backend starten
-CMD ["sh", "-c", "nginx && dotnet /app/binaries/UGHApi.dll --urls http://+:80"]
+CMD ["sh", "-c", "dotnet /app/binaries/UGHApi.dll --urls http://+:80"]
