--- a/.docker/webserver/config/vhost.conf
+++ b/.docker/webserver/config/vhost.conf
@@ -11,14 +11,15 @@ http {
 
         # Frontend
         location / {
-            root /www; 
+            root /www;
             index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         # Backend Anfragen an /api
 		# PORT
         location /api/ {
-            proxy_pass http://localhost:8080; 
+            proxy_pass http://localhost:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
