--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,8 @@ services:
     environment:
       - ASPNETCORE_URLS=http://+:8080 #PORT
       - ASPNETCORE_ENVIRONMENT=Development
+    secrets: # Need to be used in the connection string
+      - db__user_password
     depends_on:
       - db
 
@@ -42,8 +44,8 @@ services:
     environment:
       MYSQL_DATABASE: 'db'
       MYSQL_USER: 'user'
-      MYSQL_PASSWORD: 'password'
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_PASSWORD: '/run/secrets/db__user_password'
+      MYSQL_ROOT_PASSWORD_FILE: '/run/secrets/db__root_password'
       MYSQL_HOST: 'db'
       MYSQL_ROOT_HOST: '%'
     volumes:
@@ -51,9 +53,13 @@ services:
     ports:
       - '3306:3306'
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h"]
-      timeout: 20s
-      retries: 3
+      test: ['CMD-SHELL', 'mysqladmin ping -h 127.0.0.1 --password="$$(cat /run/secrets/db__root_password)" --silent']
+      interval: 3s
+      retries: 5
+      start_period: 30s
+    secrets:
+      - db__user_password
+      - db__root_password
 
   migration:
     build:
@@ -66,3 +72,9 @@ services:
 
 volumes:
   db-data:
+
+secrets:
+  db__root_password:
+    file: .docker/db/db-root-password.txt
+  db__user_password:
+    file: .docker/db/db-user-password.txt
