--- a/compose.yaml
+++ b/compose.yaml
@@ -19,8 +19,8 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ../Frontend-Vuetify:/opt/frontend
-      - /opt/frontend/node_modules
+      - ./Frontend-Vuetify:/app/frontend
+      - /app/frontend/node_modules
 
   backend:
     build:
@@ -44,8 +44,8 @@ services:
     environment:
       MYSQL_DATABASE: 'db'
       MYSQL_USER: 'user'
-      MYSQL_PASSWORD: '/run/secrets/db__user_password'
-      MYSQL_ROOT_PASSWORD_FILE: '/run/secrets/db__root_password'
+      MYSQL_PASSWORD_FILE: /run/secrets/db__user_password
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db__root_password
       MYSQL_HOST: 'db'
       MYSQL_ROOT_HOST: '%'
     volumes:
@@ -54,7 +54,7 @@ services:
       - '3306:3306'
     healthcheck:
       test: ['CMD-SHELL', 'mysqladmin ping -h 127.0.0.1 --password="$$(cat /run/secrets/db__root_password)" --silent']
-      interval: 3s
+      interval: 10s
       retries: 5
       start_period: 30s
     secrets:
@@ -66,7 +66,7 @@ services:
       context: .
       dockerfile: .docker/backend/Dockerfile-Migration
     environment:
-      - ConnectionStrings__DefaultConnection=Server=db;User ID=localhost;Password=password;Database=db;SSL Mode=None
+      - ConnectionStrings__DefaultConnection=Server=db;User ID=root;Password=password;Database=db;SSL Mode=None
     depends_on:
       - db
 
