--- a/.github/workflows/initial_create_docker.yml
+++ b/.github/workflows/initial_create_docker.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - bugfix/fix-docker-build-action
+      - Testing-docker-fix
       - workflow_dispatch
 
 jobs:
