Seperated dotnet restore during the build process to enable caching of the build dependencies for the backend.

--- a/.docker/backend/Dockerfile
+++ b/.docker/backend/Dockerfile
@@ -1,5 +1,8 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS backend-build
 WORKDIR /app
+# run the dotnet restore as a seperate step to allow docker to cache the result
+COPY ./Backend/UGHApi.csproj /app/Backend/UGHApi.csproj
+RUN dotnet restore /app/Backend/UGHApi.csproj
 
 COPY ./Backend /app/Backend
 RUN dotnet publish /app/Backend/UGHApi.csproj --use-current-runtime --self-contained false -o /app/binaries
