--- a/compose.yaml
+++ b/compose.yaml
@@ -30,36 +30,29 @@ services:
     ports:
       - 8080:8080
     environment:
-      - ASPNETCORE_URLS=http://+:8080 #PORT
+      - ASPNETCORE_URLS=http://+:8080 
       - ASPNETCORE_ENVIRONMENT=Development
-    secrets: # Need to be used in the connection string
+    secrets: 
       - db__user_password
     depends_on:
       - db
-
+       
+      
   db:
     image: mysql:5.7
     restart: unless-stopped
     command: '--default-authentication-plugin=mysql_native_password'
     environment:
-      MYSQL_DATABASE: 'db'
+      MYSQL_DATABASE: 'urlaubgegenhand'
       MYSQL_USER: 'user'
-      MYSQL_PASSWORD_FILE: /run/secrets/db__user_password
-      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db__root_password
-      MYSQL_HOST: 'db'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'rootpassword'
       MYSQL_ROOT_HOST: '%'
     volumes:
       - db-data:/var/lib/mysql
+      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     ports:
       - '3306:3306'
-    healthcheck:
-      test: ['CMD-SHELL', 'mysqladmin ping -h 127.0.0.1 --password="$$(cat /run/secrets/db__root_password)" --silent']
-      interval: 10s
-      retries: 5
-      start_period: 30s
-    secrets:
-      - db__user_password
-      - db__root_password
 
   migration:
     build:
