--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,5 @@
 version: '3.7'
+
 services:
   webserver:
     image: "nginx:alpine"
@@ -6,7 +7,7 @@ services:
     ports:
       - '80:80'
     volumes:
-      - .docker/webserver/config/vhost.dev.conf:/etc/nginx/templates/default.conf.template
+      - ./.docker/webserver/config/vhost.dev.conf:/etc/nginx/templates/default.conf.template
 
   frontend:
     build:
@@ -15,9 +16,9 @@ services:
       target: dev
     restart: unless-stopped
     environment:
-      APP_ENV: "dev"
+      - APP_ENV=dev
     ports:
-      - 3000:3000
+      - '3000:3000'
     volumes:
       - ./Frontend-Vuetify:/app/frontend
       - /app/frontend/node_modules
@@ -28,11 +29,11 @@ services:
       dockerfile: .docker/backend/Dockerfile
     restart: unless-stopped
     ports:
-      - 8080:8080
+      - '8080:8080'
     environment:
       - ASPNETCORE_URLS=http://+:8080 #PORT
       - ASPNETCORE_ENVIRONMENT=Development
-    secrets: # Need to be used in the connection string
+    secrets:
       - db__user_password
     depends_on:
       - db
@@ -50,6 +51,7 @@ services:
       MYSQL_ROOT_HOST: '%'
     volumes:
       - db-data:/var/lib/mysql
+      
     ports:
       - '3306:3306'
     healthcheck:
@@ -75,6 +77,6 @@ volumes:
 
 secrets:
   db__root_password:
-    file: .docker/db/secrets/db-root-password.txt
+    file: .docker/db/secrets/.db-root-password.txt
   db__user_password:
-    file: .docker/db/secrets/db-user-password.txt
+    file: .docker/db/secrets/.db-user-password.txt
