--- a/Backend/UGHApi.csproj
+++ b/Backend/UGHApi.csproj
@@ -30,6 +30,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="RestSharp" Version="111.1.0" />
     <PackageReference Include="SendGrid.SmtpApi" Version="1.4.6" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+    <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
