--- a/.docker/backend/Dockerfile
+++ b/.docker/backend/Dockerfile
@@ -1,6 +1,10 @@
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS backend-build
 WORKDIR /app
 
+# run the dotnet restore as a seperate step to allow docker to cache the result
+COPY ./Backend/UGHApi.csproj /app/Backend/UGHApi.csproj
+RUN dotnet restore /app/Backend/UGHApi.csproj
+
 # Copy Backend source code
 COPY ./Backend /app/Backend/
 
