Fixed Migration and Database issues (Backend)

--- a/Backend/UGHApi.csproj
+++ b/Backend/UGHApi.csproj
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.307.5" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.405" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
