--- a/Backend/UGHApi.csproj
+++ b/Backend/UGHApi.csproj
@@ -52,6 +52,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Ulid" Version="1.3.4" />
   </ItemGroup>
 
 
