Minor Issues fixed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .vs
+Backend/.vs
 Backend/.vs/UGHApi/FileContentIndex/03f7a746-0ef9-4a55-bf7b-cee8f7c0ac24.vsidx
 obj/project.assets.json
 obj/project.nuget.cache
