removed the ability to send mails without authorization and a lot of other unauthorized POST and DELETE options from different controllers

--- a/.docker/migration/Dockerfile
+++ b/.docker/migration/Dockerfile
@@ -9,6 +9,10 @@ RUN dotnet tool install -g dotnet-ef --version 7.0.10
 
 WORKDIR /app
 
+# run the dotnet restore as a seperate step to allow docker to cache the result
+COPY ./Backend/UGHApi.csproj /app/Backend/UGHApi.csproj
+RUN dotnet restore /app/Backend/UGHApi.csproj
+    
 # Copy backend source code
 COPY ./Backend /app/Backend
 
@@ -22,4 +26,5 @@ RUN dotnet build --no-restore
 RUN dotnet tool restore
 
 # Entry point to execute database migrations
-ENTRYPOINT ["dotnet", "ef", "database", "update"]
+#ENTRYPOINT ["dotnet", "ef", "database", "update"]
+ENTRYPOINT ["sleep", "infinity"]
