redesigned offer structure

--- a/my.cnf
+++ b/my.cnf
@@ -33,5 +33,5 @@ pid-file=/var/run/mysqld/mysqld.pid
 [client]
 socket=/var/run/mysqld/mysqld.sock
 
-!includedir /etc/mysql/conf.d/
-!includedir /etc/mysql/mysql.conf.d/
+[mysqld]
+max_allowed_packet=64M
