--- a/Backend/UGHApi.csproj
+++ b/Backend/UGHApi.csproj
@@ -5,6 +5,7 @@
     <!--<Nullable>enable</Nullable>-->
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>701e4618-6955-4d3b-b546-e7d2c653f91a</UserSecretsId>
+    <MagickCopyNativeLinuxMusl>true</MagickCopyNativeLinuxMusl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -54,6 +55,8 @@
     <PackageReference Include="Stripe.net" Version="46.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Ulid" Version="1.3.4" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+    <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="14.6.0" />        
   </ItemGroup>
 
 
