fixed collision with existing dist folder on server build

--- a/.docker/frontend/Dockerfile
+++ b/.docker/frontend/Dockerfile
@@ -27,8 +27,9 @@ RUN npm install
 # Ensure vite binary is executable
 RUN chmod +x ./node_modules/.bin/vite
 
-RUN npx vite build
+RUN npx vite build --outDir /app/dist --emptyOutDir
     
 # Run the server
 CMD "/usr/local/bin/node" "productionserver.js"
+#CMD npm run dev
 #ENTRYPOINT ["sleep", "infinity"]
