--- a/my.cnf
+++ b/my.cnf
@@ -24,6 +24,7 @@ socket=/var/run/mysqld/mysqld.sock
 secure-file-priv=/var/lib/mysql-files
 user=mysql
 lower_case_table_names=1
+default-time-zone='+02:00'
 
 # Disabling symbolic-links is recommended to prevent assorted security risks
 symbolic-links=0
