Implement robust database migration system with data integrity validation
Features:
- Automated data integrity validation (NULL, duplicates, orphaned records)
- Automatic data cleanup routines for common migration issues
- Pre-migration safety checks to prevent NOT NULL/UNIQUE/FK constraint failures
- Robust error handling with automatic backups before each migration
- Centralized port configuration system (ports.config)
- Container orchestration with proper dependency management
- PowerShell migration interface with comprehensive validation
- Bash migration script with single-migration processing
- Complete documentation with workflows and troubleshooting

Components:
- migrate-db.ps1: Main PowerShell interface with safety validation
- .docker/migration/migrate.sh: Container bash script with robust error handling
- .docker/migration/Dockerfile: Migration container with all dependencies
- compose.yaml: Updated with migration dependencies and port management
- ports.config: Centralized port configuration for all services
- MIGRATION-SYSTEM.md: Comprehensive documentation and usage guide

Resolves issues with:
- Migrations failing mid-process due to data integrity violations
- Manual migration management and inconsistent processes
- Port conflicts and configuration management
- Missing error handling and recovery mechanisms

--- a/.docker/migration/Dockerfile
+++ b/.docker/migration/Dockerfile
@@ -1,6 +1,9 @@
 # AS Build-env
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
 
+# Install MySQL client for database connectivity checks
+RUN apt-get update && apt-get install -y default-mysql-client && rm -rf /var/lib/apt/lists/*
+
 # Set PATH to include global tools
 ENV PATH $PATH:/root/.dotnet/tools
 
@@ -25,6 +28,9 @@ RUN dotnet build --no-restore
 # Run dotnet tool restore to ensure dotnet-ef command is available
 RUN dotnet tool restore
 
+# Copy migration script
+COPY .docker/migration/migrate.sh /usr/local/bin/migrate.sh
+RUN chmod +x /usr/local/bin/migrate.sh
+
 # Entry point to execute database migrations
-#ENTRYPOINT ["dotnet", "ef", "database", "update"]
-ENTRYPOINT ["sleep", "infinity"]
+ENTRYPOINT ["/usr/local/bin/migrate.sh"]
