--- a/ports.config
+++ b/ports.config
@@ -1,5 +1,4 @@
-# Zentrale Port-Konfiguration für das UGH-Projekt
-# Diese Datei definiert alle verwendeten Ports an einer zentralen Stelle
+# Zentrale Port-Konfiguration
 
 # Frontend Ports
 FRONTEND_PORT=3001
