feat: Complete infrastructure overhaul with 2FA implementation and unified PowerShell automation
## Summary
- Consolidated all scripts to unified PowerShell architecture (cross-platform)
- Implemented comprehensive Two-Factor Authentication system
- Created enhanced migration management with orphan cleanup
- Restructured documentation hierarchy for clarity and maintenance

## Backend Enhancements
### Two-Factor Authentication Implementation
- Add TwoFactorAuthService with TOTP/backup code support
- Implement 2FA models for setup, verification, and management
- Add database migration for 2FA columns (IsTwoFactorEnabled, TwoFactorSecret, BackupCodes)
- QR code generation with QRCoder library integration
- Time-drift tolerance and secure backup code handling

### Security Features
- Base32-encoded secrets for authenticator app compatibility
- 10 unique backup codes per user with one-time usage
- Password confirmation required for 2FA deactivation
- Admin password reset functionality via email

## Frontend Development
### Vue.js 2FA Components
- TwoFactorSetup.vue: Complete 3-step setup process with QR codes
- TwoFactorLogin.vue: Login verification with backup code fallback
- TwoFactorManagement.vue: Full 2FA administration interface
- QR code display with manual entry fallback option
- Backup code download and copy functionality

### Dependencies
- Add qrcode@^1.5.3 and qrcode-vue3@^1.6.8 packages
- TypeScript support with @types/qrcode

## Infrastructure & Automation
### PowerShell Script Consolidation
- Migrate all .sh scripts to cross-platform PowerShell equivalents
- Enhanced migration system with 8 commands: validate, cleanup, run, add, remove, status, sync, orphans
- Database management tools: access, dump, restore with secure authentication
- Port management system with centralized configuration

### Script Features
- Auto-documentation updates for MIGRATION-SYSTEM.md
- Orphan migration detection and cleanup
- Docker container integration and health checks
- Dry

--- a/.docker/backend/Dockerfile
+++ b/.docker/backend/Dockerfile
@@ -1,30 +1,43 @@
-# Backend build stage
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS backend-build
+# Build stage
+FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS backend-build
 WORKDIR /app
 
-# run the dotnet restore as a seperate step to allow docker to cache the result
-COPY ./Backend/UGHApi.csproj /app/Backend/UGHApi.csproj
-RUN dotnet restore /app/Backend/UGHApi.csproj
-    
-# Copy Backend source code
-COPY ./Backend /app/Backend/
+# Copy ports configuration for build-time access
+COPY scripts/infrastructure/ports.config /app/ports.config
+
+# Copy project files and restore with custom NuGet config
+COPY Backend/UGHApi.csproj Backend/
+
+# Create clean NuGet config to avoid Windows path issues
+RUN echo '<?xml version="1.0" encoding="utf-8"?>' > /tmp/nuget.config && \
+    echo '<configuration>' >> /tmp/nuget.config && \
+    echo '  <packageSources>' >> /tmp/nuget.config && \
+    echo '    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />' >> /tmp/nuget.config && \
+    echo '  </packageSources>' >> /tmp/nuget.config && \
+    echo '</configuration>' >> /tmp/nuget.config
+
+# Restore with clean NuGet configuration
+RUN dotnet restore Backend/UGHApi.csproj --configfile /tmp/nuget.config --disable-parallel
+
+# Copy source code
+COPY Backend/ Backend/
+
+# Build and publish with clean NuGet config (removed --no-restore as requested)
+RUN dotnet publish Backend/UGHApi.csproj \
+    --configuration Release \
+    --output /app/binaries \
+    --verbosity minimal
 
 # Copy Template folder
-COPY ./Backend/Template /app/Template/
-
-# Restore dependencies using the solution file
-RUN dotnet restore /app/Backend/UGHApi.sln
-
-# Publish the Backend project
-RUN dotnet publish /app/Backend/UGHApi.csproj --use-current-runtime --self-contained false -o /app/binaries
-RUN rm -r /app/Backend
+COPY Backend/Template /app/Template
 
 # Runtime environment
 FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS backend-runtime
 WORKDIR /app
 
-# Install dependencies for Chrome and ChromeDriver
+# Install .NET SDK for EF Tools (required for migrations)
 RUN apk add --no-cache \
+    dotnet7-sdk \
     chromium \
     chromium-chromedriver \
     bash \
@@ -35,8 +48,11 @@ RUN apk add --no-cache \
     && update-ms-fonts \
     && fc-cache -f
 
-# Set the path environment variable to include ChromeDriver
-ENV PATH="/usr/lib/chromium/:/usr/local/bin/:${PATH}"
+# Install EF Core Tools globally (compatible with .NET 7.0)
+RUN dotnet tool install --global dotnet-ef --version 7.0.20
+
+# Set PATH environment variable correctly for EF tools (consolidated)
+ENV PATH="/root/.dotnet/tools:/usr/lib/chromium/:/usr/local/bin/:$PATH"
 
 # Copy appsettings.json
 COPY Backend/appsettings.json /app
@@ -44,15 +60,47 @@ COPY Backend/appsettings.json /app
 # Copy the published binaries
 COPY --from=backend-build /app/binaries /app/binaries
 
+# Copy Backend source code for EF migrations
+COPY ./Backend /app/Backend
+
 # Copy Template folder
 COPY --from=backend-build /app/Template /app/Template
+
+# Copy ports configuration for runtime access
+COPY --from=backend-build /app/ports.config /app/ports.config
+
+# Create startup script to read port configuration
+RUN echo '#!/bin/sh' > /app/start.sh && \
+    echo 'set -e' >> /app/start.sh && \
+    echo '' >> /app/start.sh && \
+    echo '# Read port configuration from ports.config' >> /app/start.sh && \
+    echo 'if [ -f /app/ports.config ]; then' >> /app/start.sh && \
+    echo '  export $(grep "^BACKEND_PORT=" /app/ports.config | xargs)' >> /app/start.sh && \
+    echo '  export $(grep "^BACKEND_API_PORT=" /app/ports.config | xargs)' >> /app/start.sh && \
+    echo '  # Use BACKEND_API_PORT if available, otherwise fallback to BACKEND_PORT' >> /app/start.sh && \
+    echo '  PORT=${BACKEND_API_PORT:-${BACKEND_PORT:-8080}}' >> /app/start.sh && \
+    echo 'else' >> /app/start.sh && \
+    echo '  echo "Warning: ports.config not found, using default port 8080"' >> /app/start.sh && \
+    echo '  PORT=8080' >> /app/start.sh && \
+    echo 'fi' >> /app/start.sh && \
+    echo '' >> /app/start.sh && \
+    echo 'echo "Starting backend on port $PORT"' >> /app/start.sh && \
+    echo 'export ASPNETCORE_URLS="http://+:$PORT"' >> /app/start.sh && \
+    echo 'exec dotnet /app/binaries/UGHApi.dll' >> /app/start.sh && \
+    chmod +x /app/start.sh
 
 # Set environment variables for template paths
 ENV TemplateSettings__SuccessTemplate=/app/Template/confirmation.html
 ENV TemplateSettings__FailedTemplate=/app/Template/DeclinedConfirmation.html
 
-# Expose port 80
-EXPOSE 80
+# Set working directory to app root for EF commands
+WORKDIR /app
 
-# Start the .NET application
-CMD ["dotnet", "/app/binaries/UGHApi.dll", "--urls", "http://+:80"]
+# Expose port dynamically (will be read from ports.config at startup)
+EXPOSE 8080
+
+# Set ASP.NET Core environment variables
+ENV ASPNETCORE_ENVIRONMENT=Development
+
+# Start the application using startup script that reads port configuration
+CMD ["/app/start.sh"]
