--- a/Backend/UGHApi.csproj
+++ b/Backend/UGHApi.csproj
@@ -48,6 +48,8 @@
     <PackageReference Include="RestSharp" Version="111.1.0" />
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.25.0" />
+    <PackageReference Include="Otp.NET" Version="1.3.0" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="129.0.6668.8900" />
     <PackageReference Include="SendGrid.SmtpApi" Version="1.4.6" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
