--- a/Frontend-Vuetify/package.json
+++ b/Frontend-Vuetify/package.json
@@ -37,12 +37,15 @@
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0",
     "vue3-perfect-scrollbar": "^2.0.0",
-    "vuetify": "^3.0.0"
+    "vuetify": "^3.0.0",
+    "qrcode": "^1.5.3",
+    "qrcode-vue3": "^1.6.8"
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^18.15.0",
+    "@types/qrcode": "^1.5.5",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-typescript": "^14.3.0",
     "eslint": "^9.19.0",
