--- a/compose.yaml
+++ b/compose.yaml
@@ -36,9 +36,10 @@ services:
       dockerfile: .docker/backend/Dockerfile
     restart: unless-stopped
     ports:
-      - '8080:8080'
+      - '8081:8081'
+    working_dir: /app/Backend
     environment:
-      - ASPNETCORE_URLS=http://+:8080 #PORT
+      - ASPNETCORE_URLS=http://+:8081 #PORT
       - ASPNETCORE_ENVIRONMENT=Development
       - TZ=Europe/Berlin
     volumes:
@@ -90,7 +91,6 @@ services:
       context: .
       dockerfile: .docker/migration/Dockerfile
     environment:
-      - ConnectionStrings__DefaultConnection=Server=db;User ID=root;Password=password;Database=db;SSL Mode=None
       - TZ=Europe/Berlin
       - CREATE_BACKUP=true
     volumes:
