--- a/Frontend-Vuetify/package.json
+++ b/Frontend-Vuetify/package.json
@@ -25,29 +25,30 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
+    "qrcode": "^1.5.3",
+    "qrcode-vue3": "^1.6.8",
     "remixicon": "^4.2.0",
     "roboto-fontface": "*",
     "router": "^2.0.0",
     "sass": "^1.84.0",
     "sweetalert2": "^11.6.13",
-    "vue": "^3.5.13",
+    "vue": "^3.5.18",
     "vue-markdown-render": "^2.2.1",
     "vue-multiselect": "^3.0.0",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0",
     "vue3-perfect-scrollbar": "^2.0.0",
-    "vuetify": "^3.0.0",
-    "qrcode": "^1.5.3",
-    "qrcode-vue3": "^1.6.8"
+    "vuetify": "^3.0.0"
   },
   "devDependencies": {
     "@babel/types": "^7.21.4",
     "@types/markdown-it": "^14.1.2",
-    "@types/node": "^18.15.0",
+    "@types/node": "^18.19.120",
     "@types/qrcode": "^1.5.5",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-typescript": "^14.3.0",
+    "@vue/runtime-dom": "^3.5.18",
     "eslint": "^9.19.0",
     "eslint-plugin-vue": "^9.32.0",
     "glob": "^11.0.1",
