--- a/compose.yaml
+++ b/compose.yaml
@@ -67,10 +67,9 @@ services:
       MYSQL_ROOT_HOST: '%'
       TZ: 'Europe/Berlin'
     volumes:
-      - db-data2:/var/lib/mysql
+      - db-data:/var/lib/mysql
       - ./my.cnf:/etc/my.cnf
       - ./data.sql:/docker-entrypoint-initdb.d/data.sql
-      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
       
@@ -105,7 +104,7 @@ services:
     restart: "no"
     
 volumes:
-  db-data2:
+  db-data:
   migration-backups:
 
 secrets:
