--- a/Frontend-Vuetify/package.json
+++ b/Frontend-Vuetify/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "otplib": "^12.0.1",
     "@mdi/font": "7.0.96",
     "@stripe/stripe-js": "^5.5.0",
     "@vue/compiler-sfc": "^3.5.13",
