--- a/Frontend-Vuetify/package.json
+++ b/Frontend-Vuetify/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "otplib": "^12.0.1",
     "@mdi/font": "7.0.96",
     "@stripe/stripe-js": "^5.5.0",
     "@vue/compiler-sfc": "^3.5.13",
@@ -23,6 +22,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "jssha": "^3.3.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
