feat: implement multi-image support for offers with complete migration
- Migrate from single PictureId to ICollection<Picture> for multi-image support
- Add drag-and-drop image reordering with vuedraggable
- Implement image gallery with lightbox functionality in offer detail view
- Add gallery indicator (+N) for offers with multiple images
- Support up to 8 images per offer with individual deletion
- Fix image display issues (PNG format, correct src references)
- Add background service for automatic offer expiration
- Implement hierarchical skills structure with parent/child relationships
- Add new accommodation suitability options (Paare, Senioren, Gruppen, Barrierefrei)
- Fix UTF-8 encoding issues for special characters
- Increase nginx client_max_body_size to 64M for large uploads
- Refactor MyOffers.vue to Vue 3 Composition API
- Add comprehensive validation and error handling
- Update database schema with OfferId foreign key in pictures table

Breaking changes: Removed single-image PictureId support, requires database migration

--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; User ID=user; Password=password; Database=db"
+    "DefaultConnection": "Server=localhost; User ID=user; Password=password; Database=db; Charset=utf8mb4;"
   }
 }
