--- a/.docker/webserver/config/vhost.dev.conf
+++ b/.docker/webserver/config/vhost.dev.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
 
+    client_max_body_size 64M;
+
     # Frontend
     location / {
         proxy_pass http://frontend:3002;
