--- a/Frontend-Vuetify/package.json
+++ b/Frontend-Vuetify/package.json
@@ -40,6 +40,7 @@
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0",
     "vue3-perfect-scrollbar": "^2.0.0",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.0.0"
   },
   "devDependencies": {
