--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "crypto-js": "^4.2.0",
-    "otplib": "^12.0.1"
+    "otplib": "^12.0.1",
+    "vuedraggable": "^4.1.0"
   }
 }
