--- a/.docker/webserver/config/vhost.dev.conf
+++ b/.docker/webserver/config/vhost.dev.conf
@@ -25,11 +25,23 @@ server {
     # Backend Anfragen an /api
     # PORT
     location /api/ {
-        proxy_pass http://backend:8080;
+        # Debug-Logs
+        error_log /var/log/nginx/api_debug.log debug;
+        access_log /var/log/nginx/api_access.log;
+        
+        # Log request details
+        add_header X-Debug-Request-URI $request_uri;
+        add_header X-Debug-Upstream $upstream_addr;
+        
+        proxy_pass http://backend:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        
+        # Debug headers
+        proxy_set_header X-Original-URI $request_uri;
+        proxy_set_header X-Forwarded-Path $request_uri;
     }
 }
