--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - '81:80'
     volumes:
-      - ./.docker/webserver/config/vhost.dev.conf:/etc/nginx/templates/default.conf.template
+      - ./.docker/webserver/config/vhost.dev.conf:/etc/nginx/conf.d/default.conf
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
 
@@ -20,7 +20,8 @@ services:
       target: dev
     restart: unless-stopped
     environment:
-      - APP_ENV=dev
+      - APP_ENV=production
+      - NODE_ENV=production
     ports:
       - '3002:3002'
     volumes:
@@ -36,12 +37,14 @@ services:
       dockerfile: .docker/backend/Dockerfile
     restart: unless-stopped
     ports:
-      - '8081:8080'
+      - '8081:8081'
     working_dir: /app/Backend
     environment:
       - ASPNETCORE_URLS=http://+:8081 #PORT
       - ASPNETCORE_ENVIRONMENT=Production
       - TZ=Europe/Berlin
+      - ADMIN_SETUP_TOKEN=${ADMIN_SETUP_TOKEN:-default-setup-token-2024}
+      - ADMIN_EMAIL=${ADMIN_EMAIL:-admin@example.com}
     volumes:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
