--- a/compose.yaml
+++ b/compose.yaml
@@ -22,6 +22,8 @@ services:
     environment:
       - APP_ENV=production
       - NODE_ENV=production
+      - VITE_SECRET_KEY=${VITE_SECRET_KEY:-thisismytestsecretkey}
+      - SECRET_KEY=${VITE_SECRET_KEY:-thisismytestsecretkey}
     ports:
       - '3002:3002'
     volumes:
