--- a/.docker/webserver/config/vhost.dev.conf
+++ b/.docker/webserver/config/vhost.dev.conf
@@ -23,7 +23,6 @@ server {
     }
 
     # Backend Anfragen an /api
-    # PORT
     location /api/ {
         # Debug-Logs
         error_log /var/log/nginx/api_debug.log debug;
@@ -32,6 +31,9 @@ server {
         # Log request details
         add_header X-Debug-Request-URI $request_uri;
         add_header X-Debug-Upstream $upstream_addr;
+        
+        # Important: Remove /api/ prefix when forwarding to backend
+        rewrite ^/api/(.*)$ /api/$1 break;
         
         proxy_pass http://backend:8081;
         proxy_http_version 1.1;
@@ -43,5 +45,17 @@ server {
         # Debug headers
         proxy_set_header X-Original-URI $request_uri;
         proxy_set_header X-Forwarded-Path $request_uri;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # Buffer settings for file uploads
+        proxy_request_buffering off;
+        proxy_buffering off;
     }
 }
