--- a/.docker/webserver/config/vhost.conf
+++ b/.docker/webserver/config/vhost.conf
@@ -1,30 +1,78 @@
 events {}
-
 http {
     include mime.types;
     default_type application/octet-stream;
     sendfile on;
     keepalive_timeout 65;
 
+    server{
+            listen 80;
+            server_name alreco.de www.alreco.de;
+            return 301 https://$host$request_uri;
+        }
+    
     server {
-        listen 80;
-
+             listen 443 ssl;
+             client_max_body_size 64M;
+             server_name alreco.de;
+             ssl_certificate /fullchain.pem; # managed by Certbot
+             ssl_certificate_key /privkey.pem; # managed by Certbot
+       
         # Frontend
         location / {
-            root /www;
-            index index.html;
-            try_files $uri $uri/ /index.html;
+             proxy_pass http://frontend:3002;
+		     proxy_http_version 1.1;
+       		 proxy_set_header Upgrade $http_upgrade;
+        	 proxy_set_header Connection "Upgrade";
+             # And now all the stuff from above, again.
+             proxy_set_header    Host                $host;
+             proxy_set_header    X-Real-IP           $remote_addr;
+             proxy_set_header    X-Forwarded-Host    $host;
+             proxy_set_header    X-Forwarded-Server  $host;
+             proxy_set_header    X-Forwarded-Proto   $scheme;
+             proxy_set_header    X-Forwarded-For     $remote_addr;
+             proxy_redirect off;
+             proxy_connect_timeout 90s;
+             proxy_read_timeout 90s;
+             proxy_send_timeout 90s;
         }
 
         # Backend Anfragen an /api
 		# PORT
         location /api/ {
-            proxy_pass http://localhost:8080;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+        # Debug-Logs
+        error_log /var/log/nginx/api_debug.log debug;
+        access_log /var/log/nginx/api_access.log;
+        
+        # Log request details
+        add_header X-Debug-Request-URI $request_uri;
+        add_header X-Debug-Upstream $upstream_addr;
+        
+        # Important: Remove /api/ prefix when forwarding to backend
+        rewrite ^/api/(.*)$ /api/$1 break;
+        
+        proxy_pass http://backend:8081;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        
+        # Debug headers
+        proxy_set_header X-Original-URI $request_uri;
+        proxy_set_header X-Forwarded-Path $request_uri;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # Buffer settings for file uploads
+        proxy_request_buffering off;
+        proxy_buffering off;
         }
     }
 }
