fixed persistent utf8 bug

--- a/my.cnf
+++ b/my.cnf
@@ -31,8 +31,12 @@ symbolic-links=0
 
 #log-error=/var/log/mysqld.log
 pid-file=/var/run/mysqld/mysqld.pid
+character-set-server = utf8mb4
+collation-server = utf8mb4_unicode_ci
+
 [client]
 socket=/var/run/mysqld/mysqld.sock
+default-character-set = utf8mb4
 
 [mysqld]
 max_allowed_packet=64M
